fix(demo): make page visible in mobile devices

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,7 +3,7 @@
 body{
   background: #2d2d53;
   color: white;
-  height: 100vh;
+  min-height: 100vh;
   padding: 0;
   margin: 0;
   font: 1em sans-serif;
